--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 
 @layer base {
   html {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'abril Fatface', sans-serif;
     scroll-behavior: smooth;
   }
 }
